--- a/package.json
+++ b/package.json
@@ -10,5 +10,9 @@
   "license": "BSD-2-Clause",
   "dependencies": {
     "chalk": "^1.1.3"
+  },
+  "repository": {
+	"type": "git",
+	"url": "https://github.com/slebetman/tcpchat-js.git"
   }
 }
